# LCD_LABS

./: .gitignore  CMakeLists.txt  main.cpp
labs/lab1/: PowerManager.cpp  PowerManager.h
labs/lab2/: PciManager.cpp  PciManager.h  main.cpp
labs/lab3/: HddManager.cpp  HddManager.h
labs/lab4/: CameraManager.cpp  CameraManager.h
labs/lab5/: UsbManager.cpp  UsbManager.h
qml/: Main.qml  MainMenuPage.qml  SpriteAvatar.qml
qml/labs/lab1/: Lab1Page.qml
qml/labs/lab2/: Lab2Page.qml
qml/labs/lab3/: Lab3Page.qml  PendulumSprite.qml
qml/labs/lab4/: CameraWarningSprite.qml  Lab4Page.qml
qml/labs/lab5/: Lab5Page.qml  TudaSudaSprite.qml
resources/: resources.qrc
resources/labs/lab1/: Lab1Page.qml
